# amnesia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  amnesia.py  memclean.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: open.md  scan.md
docs/: RESEARCH-CONSOLIDATION.md  RESEARCH-UX.md
