[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memclean"
version = "0.1.0"
description = "See, search, and clean every memory Claude Code has saved — with a claude-powered contradiction audit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.scripts]
memclean = "memclean:main"

[tool.setuptools]
py-modules = ["memclean"]
