[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amnesia-cli"
version = "0.1.0"
description = "Give your agent selective amnesia — see, search, and clean Claude Code's memory, with a claude-powered contradiction audit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/tiny-cloud-ventures/amnesia"

[project.scripts]
amnesia = "amnesia:main"

[tool.setuptools]
py-modules = ["amnesia"]
